adding a sample RSU scenario

--- a/params4_Other.ini
+++ b/params4_Other.ini
@@ -70,3 +70,25 @@ Network.adversary[*].appl.falsificationAttack = false
 Network.adversary[*].appl.replayAttack = false
 Network.adversary[*].appl.jammingAttack = true
 
+##########################################################
+#                     Section 3                          #
+##########################################################
+
+[Config Crypto]
+description = "elliptic curve cryptography"
+
+Network.SUMODirectory = "sumo/RSU" 
+
+Network.TraCI.terminate = 600s
+Network.TraCI.updateInterval = 1s
+
+Network.statistics.collectVehiclesData = false
+Network.statistics.vehicleDataLevel = 4
+
+Network.addEntity.on = true
+Network.addEntity.mode = 7
+Network.addEntity.totalVehicles = 2000
+
+Network.addRSU.on = true
+Network.addRSU.mode = 1  
+
